fix loading window layout bug

--- a/upcoming/resources/styles~300x300.css
+++ b/upcoming/resources/styles~300x300.css
@@ -112,3 +112,16 @@
   height: 5;
   fill: #FEFEFE;
 }
+
+.loading-text {
+  x: 50%;
+  y: 80%;
+  width: 100%;
+  height: 30%;
+  fill: #999999;
+  text-anchor: middle;
+  text-length: 64;
+  font-family: Colfax-Medium;
+  font-size: 30;
+  font-weight: bold;
+}
